Lint warning fixes.